# self_update

./: Cargo.toml
locales/: en-US.yml  zh-CN.yml
src/: lib.rs  update.rs
src/backends/: github.rs  gitlab.rs  s3.rs
