[package]
name = "self_update"
version = "0.30.0"
description = "Self updates for standalone executables"
repository = "https://github.com/jaemk/self_update"
keywords = ["update", "upgrade", "download", "release"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
authors = ["James Kominick <james@kominick.com>"]
exclude = ["/ci/*", ".travis.yml", "appveyor.yml"]
edition = "2018"

[package.metadata.i18n]
available-locales = ["en-US", "zh-CN"]
default-locale = "en-US"
load-path = "locales"

[dependencies]
serde_json = "1.0.82"
tempfile = "3.3.0"
flate2 = { version = "1.0.24", optional = true }
tar = { version = "0.4.38", optional = true }
semver = "1.0.12"
zip = { version = "0.6.2", default-features = false, features = ["time"], optional = true }
either = { version = "1.7.0", optional = true }
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "json"] }
hyper = "0.14.20"
indicatif = "0.17.0"
quick-xml = "0.23.0"
regex = "1.6.0"
log = "0.4.17"
rust-i18n = { branch = "main", git = "https://github.com/Itsusinn/rust-i18n.git"}
once_cell = "1.13.0"

[features]
default = ["reqwest/default-tls"]
archive-zip = ["zip"]
compression-zip-bzip2 = ["zip/bzip2"] #
compression-zip-deflate = ["zip/deflate"] #
archive-tar = ["tar"]
compression-flate2 = ["flate2", "either"] #
rustls = ["reqwest/rustls-tls"]

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
